migrated to openfx and java 11