@@ -7,7 +7,7 @@ import java.time.format.DateTimeFormatter
 
 buildscript {
     ext {
-        springBootVersion = '2.0.1.RELEASE'
+        springBootVersion = '2.0.5.RELEASE'
     }
 
     repositories {
@@ -15,24 +15,32 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
     }
 }
 
 plugins {
     id "com.zoltu.git-versioning" version "3.0.3"
-    id 'pl.allegro.tech.build.axion-release' version '1.5.0'
-    id "de.undercouch.download" version "3.4.2"
-    id "com.avast.gradle.docker-compose" version "0.7.1"
+    id 'pl.allegro.tech.build.axion-release' version '1.9.3'
+    id "de.undercouch.download" version "3.4.3"
+    id "com.avast.gradle.docker-compose" version "0.8.8"
+    id "com.palantir.graal" version "0.1.1-7-gdcfac74"
     id "com.markklim.plugins.mfc" version "0.1.23"
 }
 
 apply plugin: 'base'
 apply plugin: 'java'
+apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
 apply plugin: "io.spring.dependency-management"
 apply plugin: 'jacoco'
+apply plugin: 'com.google.osdetector'
+apply plugin: 'com.palantir.graal'
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 ZoltuGitVersioning {
     customDescribeProcessor { describeResults ->
@@ -47,6 +55,10 @@ ZoltuGitVersioning {
                 sha        : matcher.group(6),
         ]
     }
+}
+
+jacoco {
+    toolVersion = "0.8.2"
 }
 
 ext {
@@ -72,12 +84,22 @@ ext {
             'version'              : project.version,
     ]
 
+    platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
+
     jsr305Version="3.0.1"
-    lombokVersion="1.18.2"
+    lombokVersion="edge-SNAPSHOT"
+    openFxVersion="11"
 }
 
 repositories {
     jcenter()
+    maven { url 'https://projectlombok.org/edge-releases' }
+    maven { url 'https://repo.spring.io/snapshot' }
+}
+
+graal {
+    outputName 'cassandra-client'
+    mainClass 'com.github.kindrat.cassandra.client.CassandraClientGUI'
 }
 
 dependencyManagement {
@@ -87,7 +109,7 @@ dependencyManagement {
         }
     }
     dependencies {
-        dependency("org.apache.commons:commons-lang3:3.5")
+        dependency("org.apache.commons:commons-lang3:3.8.1")
         dependency("io.projectreactor:reactor-core:3.0.7.RELEASE")
         dependency("io.projectreactor.addons:reactor-test:3.0.6.RELEASE")
 
@@ -100,19 +122,23 @@ dependencyManagement {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
-    compile files("lib/jfxrt.jar")
     compile("com.google.guava:guava")
     compile("com.github.nginate:commons-lang:1.0.0")
     compile("com.fasterxml.jackson.core:jackson-databind")
     compile("org.hibernate:hibernate-core")
 
+    compile("org.openjfx:javafx-controls:$openFxVersion:$platform")
+    compile("org.openjfx:javafx-fxml:$openFxVersion:$platform")
+    compile("org.openjfx:javafx-base:$openFxVersion:$platform")
+    compile("org.openjfx:javafx-graphics:$openFxVersion:$platform")
+
+    compile("org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:2.0.0.Alpha1")
+
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    compileOnly("org.projectlombok:lombok:$lombokVersion")
-    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
-
+    implementation("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
-
-    compileOnly("com.google.code.findbugs:jsr305:$jsr305Version")
+    annotationProcessor("com.google.code.findbugs:jsr305:$jsr305Version")
+    implementation("com.google.code.findbugs:jsr305:$jsr305Version")
 
     compile("com.datastax.cassandra:cassandra-driver-core:3.1.3")
     compile("org.springframework.data:spring-data-cassandra") {
@@ -124,28 +150,42 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-data-cassandra")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.testng:testng:6.14.3")
-    testCompileOnly("com.google.code.findbugs:jsr305:$jsr305Version")
 }
 
 scmVersion {
     versionIncrementer 'incrementMinorIfNotOnRelease', [releaseBranchPattern: 'release-.*']
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+wrapper {
+    gradleVersion = '4.10.2'
     distributionType = "all"
 }
 
 bootRun {
     systemProperties System.properties
+    mainClassName = "com.github.kindrat.cassandra.client.Java11Starter"
+
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+
+    systemProperties.remove("java.endorsed.dirs")
 }
 
 jar {
     enabled = true
+    manifest {
+        attributes(
+                'Main-Class': 'com.github.kindrat.cassandra.client.Java11Starter'
+        )
+    }
 }
 
 bootJar {
-    mainClassName = 'com.github.kindrat.cassandra.client.CassandraClientGUI'
+    mainClassName = 'com.github.kindrat.cassandra.client.Java11Starter'
     // this is here to enable incremental build
     classifier = 'exec'
 }
@@ -211,6 +251,29 @@ gradle.projectsEvaluated {
     }
 }
 
+compileJava {
+    options.encoding = 'UTF-8'
+
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                "-Xlint:unchecked",
+                "-Xlint:deprecation"
+        ]
+    }
+}
+
+run {
+    mainClassName = "com.github.kindrat.cassandra.client.Java11Starter"
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
 task codeCoverageReport(type: JacocoReport) {
     dependsOn test
     executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
@@ -239,6 +302,8 @@ tasks.withType(Test) {
     if (Os.isFamily(Os.FAMILY_MAC)) {
         systemProperty 'java.io.tmpdir', "/tmp"
     }
+
+    systemProperties.remove("java.endorsed.dirs")
 }
 
 migratorDropKeyspace.dependsOn envComposeUp
